crates/squawk_parser/src/snapshots/parser__test__drop_conversion_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/drop_conversion.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_CONVERSION_STMT
    DROP_KW "drop"
    WHITESPACE " "
    CONVERSION_KW "conversion"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "s"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_CONVERSION_STMT
    DROP_KW "drop"
    WHITESPACE " "
    CONVERSION_KW "conversion"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    PATH
      PATH
        PATH_SEGMENT
          NAME_REF
            IDENT "foo"
      DOT "."
      PATH_SEGMENT
        NAME_REF
          IDENT "b"
    WHITESPACE " "
    CASCADE_KW "cascade"
  SEMICOLON ";"
  WHITESPACE "\n"
  DROP_CONVERSION_STMT
    DROP_KW "drop"
    WHITESPACE " "
    CONVERSION_KW "conversion"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    PATH
      PATH
        PATH_SEGMENT
          NAME_REF
            IDENT "buzz"
      DOT "."
      PATH_SEGMENT
        NAME_REF
          IDENT "b"
    WHITESPACE " "
    RESTRICT_KW "restrict"
  SEMICOLON ";"
  WHITESPACE "\n\n"
