crates/squawk_parser/src/snapshots/parser__test__drop_event_trigger_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/drop_event_trigger.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_EVENT_TRIGGER_STMT
    DROP_KW "drop"
    WHITESPACE " "
    EVENT_KW "event"
    WHITESPACE " "
    TRIGGER_KW "trigger"
    WHITESPACE " "
    NAME_REF
      IDENT "s"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_EVENT_TRIGGER_STMT
    DROP_KW "drop"
    WHITESPACE " "
    EVENT_KW "event"
    WHITESPACE " "
    TRIGGER_KW "trigger"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    NAME_REF
      IDENT "a"
    WHITESPACE " "
    CASCADE_KW "cascade"
  SEMICOLON ";"
  WHITESPACE "\n"
  DROP_EVENT_TRIGGER_STMT
    DROP_KW "drop"
    WHITESPACE " "
    EVENT_KW "event"
    WHITESPACE " "
    TRIGGER_KW "trigger"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    NAME_REF
      IDENT "a"
    WHITESPACE " "
    RESTRICT_KW "restrict"
  SEMICOLON ";"
  WHITESPACE "\n\n"
