crates/squawk_parser/src/snapshots/parser__test__drop_group_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/drop_group.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_GROUP_STMT
    DROP_KW "drop"
    WHITESPACE " "
    GROUP_KW "group"
    WHITESPACE " "
    NAME_REF
      IDENT "s"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_GROUP_STMT
    DROP_KW "drop"
    WHITESPACE " "
    GROUP_KW "group"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    NAME_REF
      IDENT "a"
    COMMA ","
    WHITESPACE " "
    NAME_REF
      IDENT "b"
    COMMA ","
    WHITESPACE " "
    NAME_REF
      IDENT "c"
  SEMICOLON ";"
  WHITESPACE "\n\n"
